--- a/elecdb-server/src/main/resources/application-local.properties
+++ b/elecdb-server/src/main/resources/application-local.properties
@@ -1,14 +1,15 @@
-dataSource.driverClassName=org.postgresql.Driver
+datasource.url=jdbc:postgresql://localhost:5432/postgres?user=postgres&password=
+datasource.driverClassName=org.postgresql.Driver
+datasource.maxActive=10
+datasource.maxIdle=5
+datasource.minIdle=2
+datasource.initialSize=5
+datasource.removeAbandoned=true
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=update
-dataSource.url=jdbc:postgresql://localhost:5432/postgres
-dataSource.username=postgres
-dataSource.password=
 
 spring.data.mongodb.uri=mongodb://elecdb:elecdbpass@localhost:27017/elecdb
 #dataSource.driverClassName=com.mysql.jdbc.Driver
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.hbm2ddl.auto=update
-#dataSource.url=jdbc:mysql://localhost/elecdb
-#dataSource.username=root
-#dataSource.password=root
+#dataSource.url=jdbc:mysql://localhost/elecdb?user=root&password=root
