profile prod default

--- a/elecdb-server/pom.xml
+++ b/elecdb-server/pom.xml
@@ -187,9 +187,7 @@
         <profile>
             <id>prod</id>
             <activation>
-                <property>
-                    <name>env.DYNO</name>
-                </property>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
                 <spring.profile>heroku</spring.profile>
