--- a/elecdb-ui/pom.xml
+++ b/elecdb-ui/pom.xml
@@ -63,9 +63,7 @@
         <profile>
             <id>prod</id>
             <activation>
-                <property>
-                    <name>env.DYNO</name>
-                </property>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
