--- a/elecdb-ui/pom.xml
+++ b/elecdb-ui/pom.xml
@@ -62,9 +62,6 @@
 
         <profile>
             <id>prod</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -94,7 +91,7 @@
                                         <argument>--config</argument>
                                         <argument>./webpack.config-prod.js</argument>
                                         <argument>--timeout=10000</argument>
-                                        <argument>--host=http://localhost:8080</argument>
+                                        <argument>--host=https://elecdb.herokuapp.com</argument>
                                         <argument>--app=${project.build.finalName}</argument>
                                     </arguments>
                                 </configuration>
